--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.twig
@@ -16,6 +16,9 @@
 {# Container #}
 {% set configuration = pattern_configuration('grid', '', 'columns')[columns][columns_width] %}
 
+{% set vertical_center = vertical_center|default(false) %}
+{% set equal_height = vertical_center == true ? true: equal_height %}
+
 {% set classes = ([
   'grid',
   configuration,
@@ -32,7 +35,9 @@
         {% block cell_outer %}
           {% set column_name = 'column_' ~ (cell_counter + 1) %}
           {% set cell_classes = [
-            equal_height == true ? 'flex flex-col'
+            flip_mobile == '1' and cell_counter == '1' ? 'row-start-1 lg:row-start-auto',
+            equal_height == true ? 'flex flex-col',
+            vertical_center == true ? 'justify-center',
           ]
           %}
           {% set cell_attributes = region_attributes[column_name]|default(create_attribute()).addClass(cell_classes | sort) %}
