--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.twig
@@ -23,7 +23,7 @@
     <div class="flex-none">
     {% include "@atoms/svg/svg.twig" with {
       "icon": "alert--" ~ variant,
-      "size": "w-6 h-6"
+      "size": "medium"
     } only %}
     </div>
     <div class="leading-tight flex flex-col space-y-2">
