--- a/starter-kits/tailwind/source/default/patterns/04-templates/basic/basic.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/basic/basic.twig
@@ -20,13 +20,13 @@
 {% embed "@organisms/container/container.twig" with { padding_top: 'default', 'width': width } %}
   {% block content %}
     <div class="text-gray-dark">
-      {% include "@atoms/headline/headline.twig" with {
-        headline: headline,
-        variant: 'h1'
+      {% embed "@atoms/rich-text/rich-text.twig" with {
       } only %}
-    </div>
-    <div class="pt-8">
-      {{ content }}
+        {% block text %}
+          <h1>{{ headline }}</h1>
+          <div>{{ content }}</div>
+        {% endblock %}
+      {% endembed %}
     </div>
   {% endblock %}
 {% endembed %}
