--- a/starter-kits/tailwind/source/default/patterns/01-atoms/placeholder/_placeholder-macro.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/placeholder/_placeholder-macro.twig
@@ -77,6 +77,10 @@
   {% import _self as self %}
   {% set imageConfig = pattern_configuration('placeholder', 'background', 'image_config') %}
   {% set image_styles = imageConfig.styles %}
+{%  if image_styles[style] is not empty %}
 <div class="{{ classes }}" style="background-image: url('{{ self.get_placeholder_url(image_styles[style], placeholder_url) }}')">
 </div>
+  {% else %}
+    {{ style }} not found.
+  {% endif %}
 {% endmacro %}
