--- a/starter-kits/tailwind/source/default/patterns/02-molecules/language-select/language-select.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/language-select/language-select.twig
@@ -1,6 +1,6 @@
 <div class="relative text-gray-600">
   <div class="flex items-center cursor-pointer" @click="languageSwitcherOpen = !languageSwitcherOpen">
-    <div class="mr-2 uppercase dark:text-white">{{ language }}</div>
+    <div class="mr-2 uppercase">{{ language }}</div>
     <div class="mr-2.5">
       {% include "@atoms/svg/_svg--icon.twig" with {
         icon: 'globe',
@@ -15,16 +15,16 @@
       } only %}
     </div>
   </div>
-  <ul class="absolute left-1/4 p-4 top-10 bg-gray-400 box-shadow rounded -translate-x-1/2 hidden" :class="{'block': languageSwitcherOpen, 'hidden': !languageSwitcherOpen}">
+  <ul class="absolute left-0 p-4 top-10 border bg-gray-white box-shadow rounded hidden" :class="{'block': languageSwitcherOpen, 'hidden': !languageSwitcherOpen}">
     {%- for key, item in links -%}
       {%- if item.link and item.langcode != language -%}
         <li class="last:mb-0 mb-4 group">
           <span class="language-select-icon__text">
-            <a href="{{ item.path }}" class="flex items-center dark:text-white group-hover:text-yellow-500 transition-colors">
+            <a href="{{ item.path }}" class="flex items-center group-hover:text-yellow-500 transition-colors">
               <span class="mr-4">
                 {% include "@atoms/svg/_svg--icon.twig" with {
                   icon: item.langcode,
-                  size: 'w-5 h-5',
+                  size: 'small',
                 } only %}
               </span>
               <span>{{ item.text }}</span>
