--- a/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
@@ -13,7 +13,7 @@
         <div class="w-3/6 md:w-2/6 max-w-xs md:max-w-7xl">
           {% include "@atoms/logo/logo.twig" only %}
         </div>
-        <div class="flex justify-end items-center flex-1 lg:hidden" @click="menuIsOpen = !menuIsOpen">
+        <div class="flex justify-end items-center flex-1 lg:hidden">
           {% include "@atoms/hamburger/hamburger.twig" only %}
         </div>
         <div class="w-full flex-grow hidden text-black z-20 mt-2 sm:mt-6 bg-white absolute lg:static left-0 top-11 w-full lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden': !menuIsOpen}">
