--- a/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
@@ -19,9 +19,6 @@
 
 {% block footer %}
   {% include "@organisms/footer/footer.twig" with {
-    menu_1: footer_menu_1,
-    menu_2: footer_menu_2,
-    menu_3: footer_menu_3,
-    menu_4: footer_menu_4,
-  } %}
+    footer_menu: footer_menu,
+  } only %}
 {% endblock footer %}
