--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
@@ -23,9 +23,9 @@
 ] %}
 
 {% set image_classes = [
-  'relative overflow-hidden flex-none w-48',
-  variant == 'default'? 'h-48 rounded-full mx-auto',
-  variant == 'horizontal' ? 'h-auto -m-8 mr-8'
+  'relative overflow-hidden flex-none ',
+  variant == 'default'? 'h-48 w-48 rounded-full mx-auto',
+  variant == 'horizontal' ? 'h-auto -m-8 mr-8 w-24 lg-48'
 ] %}
 
 {#
