--- a/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
@@ -54,7 +54,7 @@
 {% embed "@templates/site-container.twig" with {
   primary_menu: page.primary_menu,
   language_select: page.language_switcher,
-  footer_menu: page.footer,
+  footer_menu: page.footer_menu,
   highlighted: page.highlighted
 } %}
   {% block main %}
