--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
@@ -39,7 +39,7 @@
   pattern_configuration('spacing', '', 'padding_bottom')[padding_bottom],
   pattern_configuration('container', '', 'width')[width],
   classes,
-  'mx-auto'
+  'mx-auto w-full'
 ] | sort | join(' ') | trim )%}
 
 {% set attributes = attributes|default(create_attribute()) %}
