fix: Cleanup debug message.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.twig
@@ -7,7 +7,7 @@
  * See rich-text.wingsuit.yaml for documentation.
  */
 #}
-{# TEMPLATE #}21
+{# TEMPLATE #}
 <div class="prose dark:prose-dark lg:prose-lg max-w-none">
   {% block text %}
     {{ text }}
