--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
@@ -14,12 +14,11 @@
 
     <div class="flex flex-col pt-8 items-center text-center md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24">
       <div{{ region_attributes.pre_headline|default(create_attribute()).addClass('dark:text-gray-100 uppercase tracking-loose font-medium w-full mb-4') }}>{{ pre_headline }}</div>
-      {% embed "@atoms/rich-text/rich-text.twig" %}
-        {% block text %}
-          <h1>{{ headline }}</h1>
-          <p>{{ text }}</p>
-        {% endblock %}
-      {% endembed %}
+      {% include "@molecules/rich-snippet/rich-snippet.twig" with {
+        headline: headline,
+        headline_tag: 'h1',
+        text: text
+      } only %}
       <div class="flex justify-center">
         <div{{ region_attributes.button|default(create_attribute()).addClass('mr-5') }}>{{ button }}</div>
       </div>
