--- a/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
@@ -1,4 +1,4 @@
-{%- set image -%}{{- image -}}{% endset %}s
+{%- set image -%}{{- image -}}{% endset %}
 {% embed "@organisms/container/container.twig" with { padding_top: 'default', 'width': 'small', padding_bottom: 'default' } %}
   {% block content %}
       {% embed "@atoms/rich-text/rich-text.twig" with {
