feat(storyloader): Add initial storyloader webpack loader

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/placeholder/_placeholder-macro.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/placeholder/_placeholder-macro.twig
@@ -58,7 +58,7 @@
   {% else %}
     {% if is_responsive_image == false %}
       <img src="{{- self.get_placeholder_url(image_style, placeholder_url)|trim -}}" alt="A placeholder image">
-    {% else %}
+    {% elseif image_styles[image_style.style] is not empty%}
       <picture>
         {% for breakpoint_name, image_style_name in image_style.breakpoints %}
           {% if image_styles[image_style_name] is not empty %}
@@ -69,6 +69,8 @@
         <img src="{{- self.get_placeholder_url(image_styles[image_style.style], placeholder_url)|trim -}}"
              alt="MDN">
       </picture>
+      {% else %}
+       Imagestyle {{ image_style.style }} not found.
     {% endif %}
   {% endif %}
 {% endmacro %}
