fix(linting): Add core as dependency

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -20,32 +20,31 @@
   variant == 'horizontal' ? 'flex-col md:flex-row' : 'flex-col'
 ] | sort | join(' ') | trim ) %}
 
+{% set image_classes = ([
+  variant == 'default' ? 'flex-0',
+  variant == 'horizontal' ? 'h-48 lg:h-auto w-full lg:w-48 relative'
+  ] | sort | join(' ') | trim ) %}
+
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
   {% if image is not empty %}
-    <div class="flex-0">
+    <div class="{{ image_classes }}">
       {% block image %}
         {{ image }}
       {% endblock %}
     </div>
   {% endif %}
   <div class="p-6 flex-1">
-    {% embed "@atoms/rich-text/rich-text.twig" %}
-    {% block text %}
-      <{{ headline_element }}>
-        <div{{ region_attributes.preheadline|default(create_attribute()).addClass('text-sm font-normal') }}>
-          {{ preheadline }}
-        </div>
-        {{ headline }}
-      </{{ headline_element }}>
-      <div>
-        {{ text }}
-      </div>
-    {% endblock %}
-    {% endembed %}
+    {% include "@molecules/rich-snippet/rich-snippet.twig" with {
+      preheadline: preheadline,
+      headline: headline,
+      headline_tag: headline_tag,
+      text: text
+    } only %}
     <div class="mt-8">
       {{ button }}
     </div>
+  </div>
 </{{ element }}>
