feat: Replace drimage with easy responsive image

--- a/starter-kits/tailwind/apps/drupal/templates/layout/page--user.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page--user.html.twig
@@ -45,11 +45,12 @@
  * @see html.html.twig
  */
 #}
+
 {% extends "page.html.twig" %}
   {% block main %}
     {% embed "@templates/basic/basic.twig" with {width: 'small' } %}
       {% block headline %}
-        Welcome to <br>the Peach Company!
+        Welcome
       {% endblock %}
       {% block content %}
         {{ page.content }}
