--- a/starter-kits/tailwind/source/default/tokens/tokens.css
+++ b/starter-kits/tailwind/source/default/tokens/tokens.css
@@ -1,3 +1,9 @@
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 html {
   height: 100%;
 }
@@ -10,9 +16,6 @@ img {
   width: 100%;
 }
 
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
-
+.background-cover img {
+  @apply w-full h-full object-cover;
+}
