chore(storybook-addon): Move csf loader to storybook plugin

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -1,3 +1,8 @@
 {% include "@atoms/svg/_svg--icon.twig" with {
   icon: icon,
 } only %}
+TEST
+{{ dump(sample) }}
+
+DEMO3
+{{ pattern_preview('svg_icon', {}, 'icon') }}
