--- a/docs/apps/pages/pages/html.twig
+++ b/docs/apps/pages/pages/html.twig
@@ -19,7 +19,7 @@
     {% endfor %}
     <link rel="shortcut icon" href="/favicons/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/et3/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="/favicons/favicon-48x48.png">
     <link rel="manifest" href="/favicons/manifest.json">
@@ -116,7 +116,6 @@
   </head>
   <body x-data="{ menuIsOpen: false, modal: { visible: false, url:''} }">
     {{ content }}
-
     <script type="text/javascript">
       Drupal = {};
       Drupal.behaviors = {};
