--- a/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
@@ -13,16 +13,10 @@
     <div class="flex items-center justify-between">
       <span class="font-bold">{{ label }}</span>
       <div x-cloak :class="{ 'hidden' : selected == true }" >
-        {% include "@atoms/svg/_svg--icon.twig" with {
-          icon: 'plus',
-          size: 'small',
-        } only %}
+        {{ pattern('icon_spritemap', {icon: 'plus' } ) }}
       </div>
       <div x-cloak :class="{ 'hidden' : selected == false }">
-        {% include "@atoms/svg/_svg--icon.twig" with {
-          icon: 'minus',
-          size: 'small',
-        } only %}
+        {{ pattern('icon_spritemap', {icon: 'minus' } ) }}
       </div>
     </div>
   </button>
