--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -23,28 +23,16 @@
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
         <a class="text-gray-500">
-          {% include "@atoms/svg/_svg--icon.twig" with {
-            icon: "facebook",
-            size: 'small',
-          } only %}
+          {{ pattern('icon_spritemap', {icon: 'facebook' } ) }}
         </a>
         <a class="ml-3 text-gray-500">
-          {% include "@atoms/svg/_svg--icon.twig" with {
-            icon: "instagram",
-            size: 'medium',
-          } only %}
+          {{ pattern('icon_spritemap', {icon: 'instagram' } ) }}
         </a>
         <a class="ml-3 text-gray-500">
-          {% include "@atoms/svg/_svg--icon.twig" with {
-            icon: "twitter",
-            size: 'medium',
-          } only %}
+          {{ pattern('icon_spritemap', {icon: 'twitter' } ) }}
         </a>
         <a class="ml-3 text-gray-500">
-          {% include "@atoms/svg/_svg--icon.twig" with {
-            icon: "linkedin",
-            size: 'medium',
-          } only %}
+          {{ pattern('icon_spritemap', {icon: 'linkedin' } ) }}
         </a>
       </span>
         </div>
