--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -84,10 +84,7 @@
             {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
             :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}"
           >
-            {% include "@atoms/svg/_svg--icon.twig" with {
-              size: 'small',
-              icon: 'sort-down'
-            } only %}
+            {{ pattern('icon_spritemap', {icon: 'sort-down' } ) }}
           </div>
         {% endif %}
       </div>
