--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.twig
@@ -8,11 +8,11 @@
 #}
 {# VARIANTS #}
 {% set classes = ([
-  "p-5 w-full shadow-lg rounded-lg text-sm",
-  variant == 'status' ? "bg-green-100 border-green-500 text-green-700",
-  variant == 'error' ? "bg-red-100 border-red-500 text-red-700",
-  variant == 'warning' ? "bg-yellow-100 border-yellow-500 text-yellow-700",
-  variant == 'info' ? "bg-blue-100 border-blue-500 text-blue-700"
+  "p-4.5 w-full shadow-lg rounded-lg text-sm",
+  variant == 'status' ? "bg-green-50 border-green-500 text-green-700",
+  variant == 'error' ? "bg-red-50 border-red-500 text-red-700",
+  variant == 'warning' ? "bg-yellow-50 border-yellow-500 text-yellow-700",
+  variant == 'info' ? "bg-blue-50 border-blue-500 text-blue-700"
 ] | sort | join(' ') | trim )%}
 {% set header_color = ([
   variant == 'status' ? "text-green-600",
@@ -20,12 +20,18 @@
   variant == 'warning' ? "text-yellow-600",
   variant == 'info' ? "text-blue-600"
 ] | sort | join(' ') | trim )%}
+{% set icon_color = ([
+  variant == 'status' ? "text-green-400",
+  variant == 'error' ? "text-red-400",
+  variant == 'warning' ? "text-yellow-400",
+  variant == 'info' ? "text-blue-400"
+] | sort | join(' ') | trim )%}
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATE #}
 <div {{ attributes }}>
   <div class="flex space-x-3">
-    <div class="flex-none pt-0.5">
+    <div class="flex-none {{ icon_color }}">
       {{ pattern('icon_spritemap', {icon: 'alert--' ~ variant } ) }}
     </div>
     <div class="tracking-[0.01em] flex flex-col space-y-2">
